--- a/index.html
+++ b/index.html
@@ -55,6 +55,18 @@
                 <td>Task 9</td>
                 <td><a href="./task9.html">Link 9</a></td>
             </tr>
+            <tr>
+                <td>Task 10</td>
+                <td><a href="./task10.html">Link 10</a></td>
+            </tr>
+            <tr>
+                <td>Task 11</td>
+                <td><a href="./task11.html">Link 11</a></td>
+            </tr>
+            <tr>
+                <td>Task 12</td>
+                <td><a href="./task12.html">Link 12</a></td>
+            </tr>
         </table>
 </body>
 </html>
